@@ -2,6 +2,7 @@ v1.6.10
 Search can fail if more than one CPT but one is empty - FIXED
 Search with near field can fire before geolocation returned - FIXED
 Sort by farthest not working, sorts by nearest - FIXED
+Change enquiry email name if owned by admin or not claimed - CHANGED
 
 v1.6.9
 Tab custom field hook missing htmlvar variable - FIXED
